@startuml

title __CONTROLLERS's Class Diagram__\n

  package Controllers {
    class alternativesController {
        + gridPane : GridPane
        + title : Label
        {static} + alternativesByCriteria : ArrayList<Matrix>
        - currentIndex : int
        + initialize()
        - initializeTableForAlternatives()
        - getValuesFromGridIntoAlternativesList()
        + next()
        + showReference()
    }
  }
  

  package Controllers {
    class criteriaController {
        + gridPane : GridPane
        + title : Label
        {static} ~ criteriaMatrix : Matrix
        {static} + criteriaControllerStage : Stage
        + next()
        + initialize()
        - initializeTable()
        - getValuesFromGridIntoCriteriaMatrix()
        + showReference()
    }
  }
  

  package Controllers {
    class homeController {
        {static} + homeControllerStage : Stage
        + criteriaGridPane : GridPane
        + alternativesGridPane : GridPane
        - alt : int
        - crit : int
        - generateTable()
        + next()
        + addAlternative()
        + removeAlternative()
        + addCriterion()
        + removeCriterion()
        + initialize()
        + removeNodeByRowColumnIndex()
        + showReference()
    }
  }
  

  package Controllers {
    class resultController {
        + gridPane : GridPane
        + initialize()
        - reverse()
        - generateAndSortResults()
        - createTable()
        + showReference()
    }
  }
  

  alternativesController -up-|> Initializable
  criteriaController -up-|> Initializable
  homeController -up-|> Initializable
  resultController -up-|> Initializable
  resultController o-- AHP : ahp


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
